--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -1405,4 +1405,7 @@
     <!-- Label for area where tiles can be dragged out of [CHAR LIMIT=60] -->
     <string name="drag_to_add_tiles">Drag to add tiles</string>
 
+    <!-- Button to edit the tile ordering of quick settings [CHAR LIMIT=60] -->
+    <string name="qs_edit">Edit</string>
+
 </resources>
